--- a/_posts/2018-01-12-corgi.md
+++ b/_posts/2018-01-12-corgi.md
@@ -6,7 +6,7 @@ author: Nova
 layout: post
 permalink: /2018/04/10/corgi/
 
-image: https://etalab.github.io/template.data.gouv.fr/images/corgi.jpg
+image: https://template.data.gouv.fr/images/template/corgi.jpg
 excerpt: The Welsh Corgi, sometimes known as just a Corgi (/ˈkɔːrɡi/, Welsh for "dwarf dog"; plural "corgis" or occasionally the etymologically consistent "corgwn" (/ˈkɔːrɡuːn/)), is a small type of herding dog that originated in Wales.
 ---
 
