--- a/_posts/2018-04-10-shiba-inu.md
+++ b/_posts/2018-04-10-shiba-inu.md
@@ -6,7 +6,7 @@ author: Juna
 layout: post
 permalink: /2018/04/10/shiba-inu/
 
-image: https://etalab.github.io/template.data.gouv.fr/images/shiba.jpg
+image: https://template.data.gouv.fr/images/template/shiba.jpg
 excerpt: The Shiba Inu (柴犬) is the smallest of the six original and distinct spitz breeds of dog from Japan.
 ---
 
