--- a/_posts/2018-01-19-frenchie.md
+++ b/_posts/2018-01-19-frenchie.md
@@ -6,7 +6,7 @@ author: Tama
 layout: post
 permalink: /2018/04/10/frenchie/
 
-image: https://etalab.github.io/template.data.gouv.fr/images/french.jpg
+image: https://template.data.gouv.fr/images/template/french.jpg
 excerpt: The French Bulldog, also known as Frenchie, is a small breed of domestic dog. Frenchies were the result in the 1800s of a cross between bulldog ancestors imported from England and local ratters in Paris, France.
 ---
 
